--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -76,7 +76,7 @@
         <h3>Work Experience</h3>
       </div>
       <div class="timeline">
-        <article class="timeline-item" *ngFor="let item of data.experience; let i = index" [style.--order]="i">
+        <article *ngFor="let item of data.experience; let i = index" [style.--order]="i">
           <h4>{{ item.title }}</h4>
           <p class="timeline-company">{{ item.company }}</p>
           <p class="timeline-period">{{ item.period }}</p>
