--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -209,7 +209,7 @@ h4 {
   gap: 1rem;
 }
 
-.timeline-item {
+.timeline article {
   position: relative;
   padding: 1rem 1rem 0.95rem 1.4rem;
   border-radius: 14px;
@@ -218,7 +218,7 @@ h4 {
   animation-delay: calc(var(--order, 0) * 100ms);
 }
 
-.timeline-item::before {
+.timeline article::before {
   content: "";
   position: absolute;
   left: 0.7rem;
@@ -276,7 +276,7 @@ li + li {
 }
 
 .reveal,
-.timeline-item,
+.timeline article,
 .certificate-badge {
   animation-name: reveal-up;
   animation-duration: 640ms;
