--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -85,16 +85,8 @@
       <div class="section-title">
         <h3>Work Experience</h3>
       </div>
-      <div class="timeline timeline--overlay">
-        <article
-          #experienceCard
-          class="timeline-card"
-          *ngFor="let item of data.experience; let i = index"
-          [style.--order]="i"
-          [style.--stack-index]="i"
-          [attr.data-index]="i"
-          [class.is-visible]="visibleExperience.has(i)"
-        >
+      <div class="timeline">
+        <article *ngFor="let item of data.experience; let i = index" [style.--order]="i">
           <h4>{{ item.title }}</h4>
           <p class="timeline-company">{{ item.company }}</p>
           <p class="timeline-period">{{ item.period }}</p>
